added first part of chapter 2

--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -7,10 +7,10 @@
 \chapter{Introduction}\label{ch1:intro}
 The pursuit of energy has shaped the history of mankind from the very beginning. And while the image of ancient humans huddled around fires for warmth, protection, and meal preparation is an archetype of our ancestral past, modern human needs remain much the same. Lighting to extend day into night, heating and cooling for residential comfort, cooking of the food we eat, access to the advanced technologies of our time – these all require energy from one source or another. Choices abound, from animal and plant-based fuels, to buried hydrocarbon resources, to alternatives like solar, wind, hydro, nuclear, and geothermal. The balance and utilization of these resources can shape societal growth on the geopolitical stage and influence the very future of the habitable Earth.
 
-This thesis examines how uncertainty characterization and risk mitigation can increase the role of one source, geothermal, in addressing the ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
+This thesis examines how uncertainty characterization and risk mitigation can increase the role of one source, geothermal, in addressing the ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal as part of a commercial energy portfolio in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
 
 \section{Energy Trends}\label{ch1:trends}
-The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} (\acrshort{aeo}) report. Based on the 2020 reference case, the AEO model predicts a 70\% increase in U.S. energy consumption by 2050 driven primarily by the industrial and power sectors \citep{us_energy_information_administration_annual_2021}. Electricity generation also grows by a third, driven primarily by renewables and natural gas as coal, nuclear, and oil see reductions (Figure \ref{fig:eia_2021_projections}). These predictions are offered with the caveat of much greater uncertainty due to the impact of the COVID-19 pandemic, although the EIA suggests a return to normal will occur by 2025 and broader, decadal trends will be unchanged \citep{us_energy_information_administration_annual_2021}. International forecasts show similar growth in consumption and production, but traditional sources of energy like coal and natural gas also increase in capacity to meet the needs of India, China, and other rapidly developing nations \citep{us_energy_information_administration_international_2020}. 
+The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} (\acrshort{aeo}) report. Based on the 2020 reference case, the AEO model predicts a 70\% increase in U.S. energy usage by 2050 driven primarily by the industrial and power sectors \citep{us_energy_information_administration_annual_2021}. Electricity generation also grows by a third, driven primarily by renewables and natural gas as coal, nuclear, and oil see reductions (Figure \ref{fig:eia_2021_projections}). These predictions are offered with the caveat of much greater uncertainty due to the impact of the COVID-19 pandemic, although the EIA suggests a return to normal will occur by 2025 and broader, decadal trends will be unchanged \citep{us_energy_information_administration_annual_2021}. International forecasts show similar growth in consumption and production, but traditional sources of energy like coal and natural gas also increase in capacity to meet the needs of India, China, and other rapidly developing nations \citep{us_energy_information_administration_international_2020}. 
  
 \begin{figure}[htp]
 \centering
@@ -56,7 +56,9 @@ One of the most significant uncertainties for geothermal is cost. The scope of a
 \section{Research Questions}\label{ch1:researchqs}
 Based on the aforementioned opportunity to integrate uncertainty characterization with geothermal exploration and development decision-making for petroleum companies, this thesis will attempt to address the following research questions:
 
-•	Can geothermal exploration risk be mitigated by insights derived from readily available data sources? And if gaps exist, can the data highlight additional actions for reducing risk before drilling a geothermal well? 
+•	Can geothermal exploration risk be mitigated using insights derived from readily-available data sources? And if gaps exist, can the data highlight additional actions for reducing risk before drilling a geothermal well? 
 
-•	How can the recognition and characterization of present and future uncertainties influence the development strategy for geothermal facilities?  In what ways will such an approach mitigate risk, if at all?
+•	How can the recognition and characterization of present and future uncertainties influence the development strategy for geothermal facilities? In what ways will such an approach mitigate risk, if at all?
 \section{Thesis Outline}\label{ch1:outline}
+This thesis is structured as follows: \\ 
+Chapter 2 provides relevant background on geothermal systems and energy capture, followed by a literature review on data-driven risk mitigation methods for exploration and facility planning. Chapters 3-4 explain the sources of data used in the thesis, preparation of that data, and the methods used for predictive analytics (Chapter 3) and cost modeling of geothermal facility project designs (Chapter 4). Also discussed is how uncertainties are defined and incorporated into both thesis focus areas. Chapters 5-6 describe the analytics and modeling results for exploration and development planning, respectively. Finally, Chapter 7 frames the overall results from a systems perspective, and Chapters 8 and 9 provide opportunities for future work and the final thesis conclusions. 
