--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -1,24 +1,58 @@
-%% This is an example first chapter.  You should put chapter/appendix that you
-%% write into a separate file, and add a line \include{yourfilename} to
-%% main.tex, where `yourfilename.tex' is the name of the chapter/appendix file.
-%% You can process specific files by typing their names in at the 
-%% \files=
-%% prompt when you run the file main.tex through LaTeX.
 \chapter{Background}\label{ch2:background}
 
-Cras pharetra ligula nec lectus bibendum, euismod mattis purus cursus. Nullam ut mi molestie purus ultricies lacinia. Phasellus sed orci ac lacus convallis vestibulum. Quisque id nulla ut ipsum finibus vehicula. Curabitur scelerisque erat lobortis, dapibus purus eget, faucibus sapien. Nam enim leo, faucibus id ante sed, fringilla luctus eros. Morbi vulputate, purus at commodo aliquet, turpis dolor sollicitudin libero, id vehicula risus dui sit amet nulla. Sed auctor efficitur urna. Praesent sagittis tellus ac velit vestibulum dignissim. Vivamus justo enim, pellentesque eu posuere id, mattis vitae felis. Aliquam id tincidunt diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+\section{Geothermal Systems}\label{ch2:geosys}
+\subsection{Heat Origins}
+\subsubsection{Accretion}
+The story of geothermal energy begins with the birth of planet Earth. Approximately 4.56 billion years ago \citep{allegre_age_1995, patterson_age_1956}, the Earth coalesced as a molten body heated by repeated impacts with objects in the early solar system like the planetesimal impact responsible for the formation of the Moon \citep{stevenson_origin_2014}. Over tens of millions of years, the Earth compacted, cooled, and differentiated, settling into the familiar layered structure of a solid inner core, liquid outer core, viscous mantle, and outermost brittle crust \citep[~p. 7]{press_understanding_2004}. The intense heat from that early accretionary history remains concentrated in the core, where temperatures - a matter of continued scientific inquiry - likely fall in the range of 6000±500 K \citep[~p. 372]{fowler_solid_2005}. Present day heat flux estimates for the whole Earth amount to 87 mW/m\textsuperscript{2}, \texttt{\char`\~}60\% of which flows through conductive and convective pathways from the deep interior to outermost crust \citep{stein_heat_1995}. Diffuse conductive heat transfer occurs everywhere across of the Earth’s surface, but heat flow concentrates along tectonic plate boundaries. In fact, the subduction-sourced volcanoes that ring the Pacific Ocean, divergent zones at the mid-ocean ridges and East African rift, and major strike-slip boundaries like the San Andreas fault zone all mark locations where focused heat anomalies are already being tapped by geothermal installations \citep[~p. 16]{dipippo_geothermal_2012}.
+\subsubsection{Radioactive Decay}
+The second major source of heat within the Earth is the decay of radioactive isotopes. Early radioactive heating included radioisotopes with short half-lives like Aluminum-26 and Hafnium-182, which are now no longer present \citep[~p. 16]{glassley_geothermal_2015}. Among the radioactive elements contributing the most to heating the crust today are uranium (U), thorium (Th), rubidium (Rb), and potassium (K) \citep[~p. 17]{glassley_geothermal_2015}. The decay of these and other elements accounts for 40\% of the crustal thermal budget \citep{stein_heat_1995}. But element abundances are not distributed uniformly throughout the crust. On average, continental crust, particularly the upper continental crust, has significantly higher concentrations of U, Th, and K radioactive elements compared to oceanic crust, and both types of crust are 1-2 orders of magnitude more enriched than the mantle \citep[~p. 276]{fowler_solid_2005}. This relationship holds for representative igneous rock types; granite generates more heat than basalt, and both out-produce ultramafic rocks like peridotites \citep[~p. 276]{fowler_solid_2005}. 
+\subsection{Geothermal Gradient}
+Average conditions show a steady increase in temperature with depth, commonly referred to as the geothermal gradient, sustained by the flow of original accretionary heat and generated radioactive heat. On average, the gradient for continental crust is \texttt{\char`\~}30\textdegree C/km \citep[~p. 209]{press_understanding_2004}. However, deviations from this value are common and reflect the complexity of the rock record in an area. The crust comprises a distinct set of layers, or strata, that vary in composition and rock type. Unlike the aforementioned igneous formations that can be relatively homogeneous, surface processes mix sediments from a variety of original source rocks, sometimes sorting them well and sometimes not, before they get deposited and indurated into sedimentary formations \citep[~p. 164-168]{press_understanding_2004}. Alteration from fluids, heat, and pressure can then modify the composition of these rocks, causing constituent minerals to change form and arrangement to create metamorphic rocks \citep[~p. 195-205]{press_understanding_2004}. The spatial and depth variations in these formations create subsurface compositional heterogeneity, directly reflected in rock properties. Thermal conductivity, specifically the ability to move deep-sourced heat to shallower depths, and radioactive element abundance, or the ability to generate additional heat in situ, can therefore vary in all directions in the subsurface. Thermal heterogeneity can be further compounded by anomalies created from salt movement \citep[~p. 164-168]{press_understanding_2004}, magmatic intrusions, or global tectonic processes. It therefore takes a good understanding of the geology and geologic history to determine the geothermal gradient of a region.
 
+\subsection{History of Use}
+blah blah blah
 
+\section{Geothermal Exploration}\label{ch2:geoexp}
+\subsection{Conventional Systems}
+\subsection{Enhanced Geothermal Systems}
+\subsection{Strategies}
+\subsubsection{Play Fairway Analysis}
+\subsubsection{Unsupervised Machine Learning}
+\subsubsection{Supervised Machine Learning}
+\subsection{Uncertainties}
+blah blah blah
 
-\section{Section sample 2}\label{ch1:sec}
+\section{Power Generation}\label{ch2:elec}
+\subsection{Surface}
+\subsubsection{Dry Steam}
+\subsubsection{Flash}
+\subsubsection{Binary Cycle}
+\subsection{Subsurface}
+\subsubsection{Natural Drive}
+\subsubsection{Hard Rock EGS}
+\subsubsection{Stratigraphic EGS}
+\subsubsection{Advanced Closed Loop}
+\subsection{Uncertainties}
+blah blah blah
 
+\section{Cost Modeling}\label{ch2:costmod}
+\subsection{MIT Energy Lab}
+\subsection{Cornell Lab}
+\subsection{GETEM/SAM}
+blah blah blah
 
+\section{Case Study}\label{ch2:case}
+\subsection{New Mexico Geothermal}
+\subsection{Southwest NM Study Area}
+\subsection{Lightning Dock Power Plant}
+blah blah blah
+
+%% EXAMPLES %%
 
 %section~\ref{ch1:sec}.
 
 %\footnote{Here is a sample footnote referencing figures~\ref{arm:fig1}
 %and~\ref{arm:fig2}.}  
-
 
 % This is an example of how you would use tgrind to include an example
 % of source code; it is commented out in this template since the code
@@ -34,16 +68,6 @@ Cras pharetra ligula nec lectus bibendum, euismod mattis purus cursus. Nullam ut
 %  \item Item 3.
 %\end{enumerate}
 
-
-% This is an example of how you would use tgrind to include an example
-% of source code; it is commented out in this template since the code
-% example file does not exist.  To use it, you need to remove the '%' on the
-% beginning of the line, and insert your own information in the call.
-%
-%\tgrind[htbp]{code/be.s.tex}{Block Exponent}{opt:be}
-
-%\subsection{Another subsection sample}
-
 %This is done by using some combination of
 %\begin{eqnarray*}
 %a_i & = & a_j + a_k \\
@@ -53,6 +77,7 @@ Cras pharetra ligula nec lectus bibendum, euismod mattis purus cursus. Nullam ut
 %a_i & = & a_j - a_k \\
 %a_i & = & a_j \ll m \mbox{shift}
 %\end{eqnarray*}
+
 %instead of the multiplication.  For example, you could use:
 %\begin{eqnarray*}
 %r & = & 4s + s\\
