--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,75 @@
 
+@article{lund_characteristics_2007,
+	title = {Characteristics, development and utilization of geothermal resources},
+	journal = {GHC Bulletin, June},
+	author = {Lund, John W},
+	year = {2007},
+	note = {Publisher: Citeseer},
+}
+
+@misc{doe_history_2021,
+	title = {A {History} of {Geothermal} {Energy} in {America}},
+	url = {https://www.energy.gov/eere/geothermal/history-geothermal-energy-america},
+	abstract = {Archaeological evidence shows that the first human use of geothermal resources in North America occurred more than 10,000 years ago with the...},
+	language = {en},
+	urldate = {2021-05-29},
+	journal = {Energy.gov},
+	author = {{DOE}},
+	month = may,
+	year = {2021},
+	note = {United States Department of Energy},
+}
+
+@book{lowrie_fundamentals_2007,
+	title = {Fundamentals of {Geophysics}},
+	isbn = {1-139-46595-3},
+	publisher = {Cambridge University Press},
+	author = {Lowrie, William},
+	year = {2007},
+}
+
+@article{england_lowrie_2008,
+	title = {Lowrie, {W}. 2007. {Fundamentals} of {Geophysics}: x+ 381 pp. {Cambridge}, {New} {York}, {Melbourne}: {Cambridge} {University} {Press}. {Price}£ 70.00, {US} 140.00(hardcovers),£35.00,{US} 70.00 (paperback). {ISBN} 9780 521 85902 8; 9780 521 67596 3 (pb).},
+	volume = {145},
+	issn = {1469-5081},
+	number = {4},
+	journal = {Geological Magazine},
+	author = {England, RW},
+	year = {2008},
+	note = {Publisher: Cambridge University Press},
+	pages = {601--602},
+}
+
+@book{dipippo_geothermal_2012,
+	title = {Geothermal power plants: principles, applications, case studies and environmental impact},
+	isbn = {0-12-394787-1},
+	publisher = {Butterworth-Heinemann},
+	author = {DiPippo, Ronald},
+	year = {2012},
+}
+
+@article{stein_heat_1995,
+	title = {Heat flow of the {Earth}},
+	volume = {1},
+	journal = {Global earth physics: a handbook of physical constants},
+	author = {Stein, Carol A},
+	year = {1995},
+	note = {Publisher: Wiley Online Library},
+	pages = {144--158},
+}
+
+@article{allegre_age_1995,
+	title = {The age of the {Earth}},
+	volume = {59},
+	issn = {0016-7037},
+	number = {8},
+	journal = {Geochimica et Cosmochimica Acta},
+	author = {Allegre, Claude J and Manhes, Gerard and Göpel, Christa},
+	year = {1995},
+	note = {Publisher: Elsevier},
+	pages = {1445--1456},
+}
+
 @techreport{nrel_2020_2020,
 	title = {2020 {Annual} {Technology} {Baseline}},
 	url = {https://atb.nrel.gov/},
